--- a/dsn/editor.html
+++ b/dsn/editor.html
@@ -9,17 +9,13 @@
                 right: 0;
                 bottom: 0;
                 left: 0;
+                border:1px solid #e3e3e3;
             }
         </style>
     </head>
     <body>
 
-        <div id="editor">
-function foo(items) {
-  var x = "All this is syntax highlighted";
-  return x;
-}
-        </div>
+        <div id="editor"></div>
 
         <script src="http://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js" type="text/javascript" charset="utf-8"></script>
         <script>
